@@ -1,3 +1,4 @@
+* Add keyword attribute to button tag
 * Support field name on image tag
 * Add option to check new version
 * Show related record names for all windows
